--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 
-email: your-email@example.com
+title: vstopwatch
+content: vstopwatch
+email: care@vstopwatch.com
 description: >- # this means to ignore newlines until "baseurl:"
   Wrue ekekek.
 baseurl: "" # the subpath of your site, e.g. /blog
